--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "xhr2": "^0.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
