--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@emotion/css": "^11.11.2",
-    "@tanstack/react-query": "^5.22.2",
+    "@tanstack/react-query": "^5.0.0-beta.35",
     "framer-motion": "^11.0.5",
     "next": "14.1.0",
     "react": "^18",
