feat: 기록하기 화면 추가

--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 REACT_APP_FIREBASE_URL = 'https://fcst-wear-default-rtdb.firebaseio.com/'
+API_KEY='AIzaSyCED6unm7942bR9vsDsK3KR6cgOerw8f_g'
+AUTH_DOMAIN='fcst-wear.firebaseapp.com'
+DATABASE_URL ='https://fcst-wear-default-rtdb.firebaseio.com'
+PROJECT_ID = 'fcst-wear'
+STORAGE_BUCKET='fcst-wear.appspot.com'
+MESSAGING_SENDER_ID='821452527350'
+APP_ID= '1:821452527350:web:90938316ff10b681b27ed7'
